# libarcomage

./: .gitmodules  CMakeLists.txt  CREDITS.TXT  DESCRIPTION.TXT  README.TXT  TODO.TXT
cmake/Modules/: CMakeDCompiler.cmake.in  CMakeDInformation.cmake  CMakeDetermineDCompiler.cmake  CMakeTestDCompiler.cmake  UseDDoc.cmake
cmake/Modules/Platform/: Linux-dmd.cmake  Linux-gdc.cmake  Windows-dmd.cmake  Windows-gdc.cmake
d/src/: ArcomageD.d
d/utils/: compileD.sh
include/: SDL_config.h  SDL_main.h
lib/: ArcomageD.lib  SDL.lib  SDL_image.lib  SDL_mixer.lib  SDL_net.lib  arcomage.lib  lua51.lib  phobos.lib
lua/: CardPools.lua  Configuration.lua
lua/Arcomage/: CardPool.lua
lua/MArcomage/: MArcomagePool.lua
lua/Touhou/: EoSD.lua  PCB.lua  TouhouPool.lua  pcb-credits.txt
old/: Makefile.win  arco.c  arcosrv.c  config.c  config.h  network.c
old/d/utils/: compileD.cmd
old/win32/: arcomage.cfg
src/: CMakeLists.txt  Makefile  arco.c  arco.d  cards.c  cards.d  cards.h  common.c  common.h  network.h  wrapper.d
utils/: compile-32.sh  compile-sharedluad.sh  compile.cmd  compile.sh  compileC.sh  recompile.cmd  recompileAll.sh
